tests/neg/semantic_free_bad_type.baa
// EXPECT: نوع المعامل 1 في 'تحرير_ذاكرة' غير متوافق

صحيح الرئيسية() {
    تحرير_ذاكرة(١).
    إرجع ٠.
}

